# haskell-game-

./: LICENSE  README.md  ci.yml  guess-number.cabal  stack.yaml
src/: Main.hs
