cabal-version:      3.0
name:               guess-number
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Katlego Sambo
maintainer:         contact@example.com
build-type:         Simple
homepage:           https://github.com/miSSkSambo/guess-number
synopsis:           A tiny console "Guess the Number" game in Haskell.
description:        A friendly, no-dependency (beyond base/time) Haskell guessing game with difficulty and hints.

executable guess-number
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:
      base >=4.14 && <5,
      time >=1.9 && <2.0
